--- a/README.me
+++ b/README.me
@@ -34,6 +34,6 @@ Styled-components
 
 ##Example of admin view (only available to admin users):
 
-<img src="./img/store-orders.png" width="700" alt="store-orders" />
-<img src="./img/store-config.png" width="700" alt="store-config" />
-<img src="./img/store-products.png" width="700" alt="store-products" />
+![Store-orders](https://res.cloudinary.com/dm2qf5epa/image/upload/v1623856954/ProjectsUtilities/store-orders_otfhbf.png)
+![Store-config](https://res.cloudinary.com/dm2qf5epa/image/upload/v1623856955/ProjectsUtilities/store-config_jaggq4.png)
+![Store-products](https://res.cloudinary.com/dm2qf5epa/image/upload/v1623856955/ProjectsUtilities/store-products_qkirc0.png)
